--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,432 @@
 */
 
 .page {
+  font-family: var(--main-font-family), sans-serif;
+  color: var(--main-text-color, #000);
+  font-weight: var(--text-font-weight);
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-size: cover;
+}
+
+.background-page {
+  background-image: repeating-linear-gradient(
+      var(--gradient-color),
+      transparent 2px
+    ),
+    repeating-linear-gradient(90deg, var(--gradient-color), transparent 2px),
+    linear-gradient(#e7e7e7 0px 50.01%, #1a1a1a);
+}
+
+.header {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+}
+
+.accent-rectangle {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  margin-block-start: 102px;
+  margin-block-end: 104px;
+  background-color: var(--main-background-color, #fff);
+  inline-size: var(--card-inline-size);
+  block-size: clamp(20.188rem, 3.85vw + 19.285rem, 22.75rem);
+  align-items: center;
+  justify-content: center;
+  outline: 2px solid var(--main-text-color, #000);
+}
+
+.title {
+  font-family: var(--accent-font-family), sans-serif;
+  text-transform: uppercase;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__text {
+  font-family: var(--accent-font-family), sans-serif;
+  text-transform: uppercase;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+}
+
+.cards {
+  inline-size: 100vw;
+}
+
+.card-list {
+  display: grid;
+  justify-content: center;
+}
+
+.card-list-item {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--main-background-color, #fff);
+  inline-size: clamp(23.313rem, 30.516vw + 16.16rem, 43.625rem);
+  border: 2px solid var(--main-text-color, #000);
+  margin-block-end: 54px;
+}
+
+.card-list-heading {
+  font-size: 18px;
+  font-weight: var(--heading-font--weight);
+  padding-inline: 10px;
+  padding-block-start: 3px;
+  padding-block-end: 4px;
+  align-self: start;
+}
+.accent-image__card {
+  display: flex;
+  position: relative;
+  justify-content: end;
+}
+
+.accent__image {
+  position: absolute;
+  color: var(--main-text-color, #000);
+  font-family: var(--accent-font-family), sans-serif;
+  font-size: 14px;
+  margin: 25px 11px;
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+  text-shadow: -1px 0 var(--main-background-color, #fff),
+    0 1px var(--main-background-color, #fff),
+    1px 0 var(--main-background-color, #fff),
+    0 -1px var(--main-background-color, #fff);
+}
+
+@supports (
+  (text-stroke: 1px var(--main-background-color, #fff)) or
+    (-webkit-text-stroke: 1px var(--main-background-color, #fff))
+) {
+  .accent__image {
+    -webkit-text-stroke: 1px var(--main-background-color, #fff);
+    text-stroke: 1px var(--main-background-color, #fff);
+    text-shadow: none;
+  }
+}
+
+.card-image {
+  inline-size: var(--card-inline-size);
+  block-size: var(--card-inline-size);
+}
+
+.card-text {
+  font-size: 18px;
+  line-height: 116.667%;
+  margin-block-start: 27px;
+  margin-inline-start: 25px;
+  margin-inline-end: 26px;
+}
+
+.card-buttons {
+  display: flex;
+  align-self: end;
+  align-items: end;
+  margin-block-end: 25px;
+  margin-block-start: 6px;
+}
+
+.card__icon-button {
+  background-color: var(--main-background-color, #fff);
+  border: none;
+  padding: 0;
+  height: 38px;
+}
+
+.icon-image:focus-visible {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px solid var(--main-text-color, #000);
+  outline-offset: -2px;
+  transition: outline 0.3s ease;
+}
+
+.effect {
+  position: relative;
+}
+
+.card__like-button {
+  position: relative;
+  background-color: var(--main-background-color, #fff);
+  border: 2px solid var(--main-text-color, #000);
+  color: var(--main-text-color);
+  inline-size: 130px;
+  block-size: 38px;
+  align-self: end;
+  margin: 22px 25px 0 5px;
+}
+
+.effect:focus-visible {
+  box-shadow: 2px 2px 0px 0px #000;
+  transition: box-shadow 0.3s ease;
+  outline: none;
+}
+
+.effect::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: var(--main-background-color);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+  mix-blend-mode: difference;
+  z-index: 0;
+  border: none;
+}
+
+.effect:hover::after {
+  transform: scaleX(1);
+}
+
+.effect:hover .button__text {
+  color: var(--main-background-color);
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  color: var(--main-background-color);
+  mix-blend-mode: difference;
+  font-family: var(--accent-font-family), sans-serif;
+  font-size: 14px;
+  line-height: 90%;
+}
+
+.card__dialog {
+  inline-size: clamp(21.313rem, 1.502vw + 20.96rem, 22.313rem);
+  block-size: 195px;
+  padding: 0;
+}
+
+.card__dialog[open] .card__dialog-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  row-gap: 30px;
+  column-gap: 20px;
+}
+
+.card__dialog[open]::backdrop {
+  background-color: var(--main-text-color, #000);
+  opacity: 0.75;
+}
+
+.card__dialog-container {
+  padding: 29px 42px;
+  background-color: var(--main-background-color, #fff);
+}
+
+.dialog-text {
+  font-family: var(--accent-font-family), sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+.card__button-close {
+  font-family: var(--accent-font-family), sans-serif;
+  font-size: 14px;
+  line-height: 90%;
+  text-transform: uppercase;
+  background-color: var(--main-background-color, #fff);
+  grid-column: 1/3;
+  block-size: 38px;
+}
+
+.card__dialog .disk {
+  margin-block-start: 0;
+}
+
+.card-image__min-contrast {
+  filter: saturate(50%);
+}
+
+.card-image__max-contrast {
+  filter: contrast(150%) saturate(150%);
+}
+
+.card-image__pink {
+  filter: hue-rotate(90deg);
+}
+
+.card-image__invert {
+  filter: invert(100%);
+}
+
+.card-image__sepia {
+  filter: sepia(100%);
+}
+
+.card-image__blur {
+  filter: blur(0.2rem);
+}
+
+.card-image__blur-sepia {
+  filter: blur(0.2rem) grayscale(100%);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__button {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: -6px 0 0 0;
+  padding: 0;
+  background-color: var(--main-background-color, #fff);
+}
+
+.card__button:focus-visible {
+  box-shadow: 2px 2px 0px 0px #000;
+  transition: box-shadow 0.3s ease;
+  outline: none;
+}
+
+.footer .button__text {
+  margin-block-end: 15px;
+  margin-inline: 19px;
+}
+.disk {
+  align-self: center;
+  margin-block-start: 15px;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon {
+  transform-origin: center;
+}
+.card__icon-button .core {
+  fill: var(--fill-color);
+}
+
+.card__icon-button:hover .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.card__icon-button .main-body {
+  fill: var(--fill-color);
+}
+
+.card__icon-button:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon .heart {
+  transform-origin: center;
+}
+
+.like-icon .core {
+  fill: var(--fill-color);
+  transition: fill 0.3s linear 0.03s;
+}
+
+.like-icon .main-body {
+  fill: var(--fill-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.card__icon-button:active .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.card__icon-button:active .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color);
+  transform-origin: center;
+  transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.12s;
+}
+
+.like-icon.is-liked .heart {
+  animation: heart-scale 0.3s ease-in 0.1s 1 normal;
+}
+
+@keyframes heart-scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.25);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks-opacity 0.3s ease-in 0.3s 1 normal;
+}
+
+@keyframes sparks-opacity {
+  0% {
+    opacity: 0;
+    fill: none;
+  }
+  50% {
+    opacity: 1;
+    fill: var(--animation-fill-color);
+  }
+  100% {
+    opacity: 0;
+    fill: none;
+  }
+}
+
+.like-icon:not(.is-liked) .contour {
+  fill: black;
+  transition: fill 0.1s linear;
+}
+
+.like-icon:not(.is-liked) .core .like-icon:not(.is-liked) .main-body {
+  fill: none;
+  transition: fill 0.3s linear;
+}
+@media (width > 376px) {
+  .card-list-item {
+    margin-block-end: 53px;
+  }
+  .card__button {
+    flex-direction: row;
+    inline-size: 335px;
+    block-size: 60px;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
+
+  .footer .button__text {
+    margin: 0;
+  }
+  .disk {
+    margin-block-start: 0;
+  }
 }
