--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,14 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --main-font-family:  'Inter';
+    --accent-font-family: 'PressStart2P';
+    --text-font-weight: 400;
+    --heading-font--weight: 700;
+    --main-text-color: #000;
+    --main-background-color: #fff;
+    --contour-color: black;
+    --fill-color: #fff;
+    --animation-fill-color: #FF0000;
+    --card-inline-size: clamp(23.188rem, 30.516vw + 16.035rem, 43.5rem);
+    --gradient-color: #d3d3d3;
+}
