--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,116 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+@keyframes heart-scale {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.25);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  @keyframes sparks-opacity {
+    0% {
+      opacity: 0;
+      fill: none;
+    }
+    50% {
+      opacity: 1;
+      fill: var(--animation-fill-color);
+    }
+    100% {
+      opacity: 0;
+      fill: none;
+    }
+  }
+
+  .sparks {
+    opacity: 0;
+  }
+  
+  .like-icon {
+    transform-origin: center;
+  }
+  .card__icon-button .core {
+    fill: var(--fill-color);
+  }
+  
+  .card__icon-button:hover .core {
+    fill: var(--contour-color);
+    transition: fill 0.3s linear 0s;
+  }
+  
+  .card__icon-button .main-body {
+    fill: var(--fill-color);
+  }
+  
+  .card__icon-button:hover .main-body {
+    fill: var(--contour-color);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  .like-icon .heart {
+    transform-origin: center;
+  }
+  
+  .like-icon .core {
+    fill: var(--fill-color);
+    transition: fill 0.3s linear 0.03s;
+  }
+  
+  .like-icon .main-body {
+    fill: var(--fill-color);
+    transition: fill 0.3s linear 0s;
+  }
+  
+  .card__icon-button:active .core {
+    fill: var(--animation-fill-color);
+    transition: fill 0.3s linear 0s;
+  }
+  
+  .card__icon-button:active .main-body {
+    fill: var(--animation-fill-color);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  .like-icon.is-liked .core {
+    fill: var(--animation-fill-color);
+    transition: fill 0.3s linear;
+  }
+  
+  .like-icon.is-liked .main-body {
+    fill: var(--animation-fill-color);
+    transform-origin: center;
+    transition: fill 0.3s linear 0.06s;
+  }
+  
+  .like-icon.is-liked .contour {
+    fill: var(--animation-fill-color);
+    transition: fill 0.3s linear 0.12s;
+  }
+  
+  .like-icon.is-liked .heart {
+    animation: heart-scale 0.3s ease-in 0.1s 1 normal;
+  }
+  
+  
+  
+  .like-icon.is-liked .sparks {
+    animation: sparks-opacity 0.3s ease-in 0.3s 1 normal;
+  }
+  
+  
+  
+  .like-icon:not(.is-liked) .contour {
+    fill: black;
+    transition: fill 0.1s linear;
+  }
+  
+  .like-icon:not(.is-liked) .core .like-icon:not(.is-liked) .main-body {
+    fill: none;
+    transition: fill 0.3s linear;
+  }
