--- a/styles/style.css
+++ b/styles/style.css
@@ -21,17 +21,14 @@
 }
 
 .background-page {
-  background-image: repeating-linear-gradient(
-      var(--gradient-color),
-      transparent 2px
-    ),
-    repeating-linear-gradient(90deg, var(--gradient-color), transparent 2px),
-    linear-gradient(#e7e7e7 0px 50.01%, #1a1a1a);
+  background-image: repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+  repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+  linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+    background-attachment: fixed; 
 }
 
 .header {
   display: flex;
-  width: 100vw;
   justify-content: center;
 }
 
@@ -63,7 +60,6 @@
 }
 
 .cards {
-  inline-size: 100vw;
 }
 
 .card-list {
@@ -77,7 +73,7 @@
   background-color: var(--main-background-color, #fff);
   inline-size: clamp(23.313rem, 30.516vw + 16.16rem, 43.625rem);
   border: 2px solid var(--main-text-color, #000);
-  margin-block-end: 54px;
+  margin-block-end: 50px;
 }
 
 .card-list-heading {
@@ -88,6 +84,8 @@
   padding-block-start: 3px;
   padding-block-end: 4px;
   align-self: start;
+  width: 100%;
+  border-bottom: 2px solid var(--main-text-color, #000);
 }
 .accent-image__card {
   display: flex;
@@ -100,7 +98,8 @@
   color: var(--main-text-color, #000);
   font-family: var(--accent-font-family), sans-serif;
   font-size: 14px;
-  margin: 25px 11px;
+  top: 25px;
+  right: 11px;
   opacity: 0.5;
   mix-blend-mode: hard-light;
   text-shadow: -1px 0 var(--main-background-color, #fff),
@@ -128,9 +127,13 @@
 .card-text {
   font-size: 18px;
   line-height: 116.667%;
-  margin-block-start: 27px;
-  margin-inline-start: 25px;
-  margin-inline-end: 26px;
+  padding-block-start: 27px;
+  padding-inline-start: 25px;
+  padding-inline-end: 26px;
+}
+
+.first-pharagraph {
+  border-top: 2px solid var(--main-text-color, #000);;
 }
 
 .card-buttons {
@@ -215,7 +218,6 @@
 
 .card__dialog {
   inline-size: clamp(21.313rem, 1.502vw + 20.96rem, 22.313rem);
-  block-size: 195px;
   padding: 0;
 }
 
@@ -232,7 +234,7 @@
 }
 
 .card__dialog-container {
-  padding: 29px 42px;
+  padding: 30px 38px 30px 38px;
   background-color: var(--main-background-color, #fff);
 }
 
@@ -242,13 +244,18 @@
   line-height: 150%;
   text-transform: uppercase;
 }
+
+.form__card-close {
+  grid-column: 1/3;
+}
+
 .card__button-close {
   font-family: var(--accent-font-family), sans-serif;
   font-size: 14px;
   line-height: 90%;
   text-transform: uppercase;
   background-color: var(--main-background-color, #fff);
-  grid-column: 1/3;
+  width: 100%;
   block-size: 38px;
 }
 
@@ -284,7 +291,7 @@
   filter: blur(0.2rem) grayscale(100%);
 }
 
-.footer {
+.save__container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -294,9 +301,10 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin: -6px 0 0 0;
+  margin: 0;
   padding: 0;
   background-color: var(--main-background-color, #fff);
+  border: 2px solid var(--main-text-color, #000);
 }
 
 .card__button:focus-visible {
@@ -305,7 +313,7 @@
   outline: none;
 }
 
-.footer .button__text {
+.save__container .button__text {
   margin-block-end: 15px;
   margin-inline: 19px;
 }
@@ -314,118 +322,13 @@
   margin-block-start: 15px;
 }
 
-.sparks {
-  opacity: 0;
-}
-
-.like-icon {
-  transform-origin: center;
-}
-.card__icon-button .core {
-  fill: var(--fill-color);
-}
-
-.card__icon-button:hover .core {
-  fill: var(--contour-color);
-  transition: fill 0.3s linear 0s;
-}
-
-.card__icon-button .main-body {
-  fill: var(--fill-color);
-}
-
-.card__icon-button:hover .main-body {
-  fill: var(--contour-color);
-  transition: fill 0.3s linear 0.05s;
-}
-
-.like-icon .heart {
-  transform-origin: center;
-}
-
-.like-icon .core {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear 0.03s;
-}
-
-.like-icon .main-body {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear 0s;
-}
-
-.card__icon-button:active .core {
-  fill: var(--animation-fill-color);
-  transition: fill 0.3s linear 0s;
-}
-
-.card__icon-button:active .main-body {
-  fill: var(--animation-fill-color);
-  transition: fill 0.3s linear 0.05s;
-}
-
-.like-icon.is-liked .core {
-  fill: var(--animation-fill-color);
-  transition: fill 0.3s linear;
-}
-
-.like-icon.is-liked .main-body {
-  fill: var(--animation-fill-color);
-  transform-origin: center;
-  transition: fill 0.3s linear 0.06s;
-}
-
-.like-icon.is-liked .contour {
-  fill: var(--animation-fill-color);
-  transition: fill 0.3s linear 0.12s;
-}
-
-.like-icon.is-liked .heart {
-  animation: heart-scale 0.3s ease-in 0.1s 1 normal;
-}
-
-@keyframes heart-scale {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.25);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.like-icon.is-liked .sparks {
-  animation: sparks-opacity 0.3s ease-in 0.3s 1 normal;
-}
-
-@keyframes sparks-opacity {
-  0% {
-    opacity: 0;
-    fill: none;
-  }
-  50% {
-    opacity: 1;
-    fill: var(--animation-fill-color);
-  }
-  100% {
-    opacity: 0;
-    fill: none;
-  }
-}
-
-.like-icon:not(.is-liked) .contour {
-  fill: black;
-  transition: fill 0.1s linear;
-}
-
-.like-icon:not(.is-liked) .core .like-icon:not(.is-liked) .main-body {
-  fill: none;
-  transition: fill 0.3s linear;
-}
 @media (width > 376px) {
   .card-list-item {
-    margin-block-end: 53px;
+    margin-block-end: 50px;
+  }
+  .accent__image {
+    top: 25px;
+    right: 25px;
   }
   .card__button {
     flex-direction: row;
@@ -434,12 +337,24 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
+    margin-block-start: -4px;
   }
 
-  .footer .button__text {
+  .save__container .button__text {
     margin: 0;
   }
   .disk {
     margin-block-start: 0;
+    width: 21px;
+    height: 21px;
+  }
+
+  .card__dialog-container {
+    padding: 30px;
+  }
+
+  .card__dialog-container .disk {
+    width: 39px;
+    height: 39px;
   }
 }
